UtahLiveDataTest/src/objects/IETTarget__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>This is the custom setting that will be used for IET to send the Target Account Information(Treasure&apos;s office).</description>
    <fields>
        <fullName>ACTV_CD__c</fullName>
        <label>ACTV_CD</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AD_ID__c</fullName>
        <label>AD_ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EVNT_TYP_ID__c</fullName>
        <label>EVNT_TYP_ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FUNC_CD__c</fullName>
        <label>FUNC_CD</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INIT_CD__c</fullName>
        <label>INIT_CD</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PPC_CD__c</fullName>
        <label>PPC_CD</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSRC_CD__c</fullName>
        <label>RSRC_CD</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VEND_CUST_CD__c</fullName>
        <label>VEND_CUST_CD</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>IET Target</label>
</CustomObject>